--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -1,3 +1,42 @@
+body{
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-image: linear-gradient(to right top, #781d51, #632456, #4d2855, #392950, #282847, #1e2b47, #162d44, #112e41, #043647, #003e4a, #00464a, #074d48);
+  border-radius: 15px;
+}
+
+.topnav a {
+  display: block;
+  position: relative;
+  left: 40%;
+  float: left;
+  text-align: center;
+  padding: 30px 30px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a {
+  margin: 50;
+  color: white;
+}
+
+/* Create a right-aligned (split) link inside the navigation bar */
+.topnav a.split {
+  float: right;
+  background-color: #04AA6D;
+  color: white;
+}
+
 div{
     max-width:auto;
 }
@@ -13,9 +52,11 @@ div{
     border-radius: 25px;
 }
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display:table;
+    margin: 50px;
+    padding: 10px;
+    flex-wrap: wrap;
+    align-content: center;
   }
   
 .text-header{
@@ -23,7 +64,7 @@ div{
     margin: 20px;
     position: relative;
     text-align: center;
-    font-family:verdana;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 20px;
     left: 20%;
 }
@@ -88,5 +129,165 @@ div{
       display: block;
       text-align: left;
     }
-    
   }
+
+  .footer{
+      position: relative;
+      padding: 15px 15px;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-image: linear-gradient(to right top, #781d51, #632456, #4d2855, #392950, #282847, #1e2b47, #162d44, #112e41, #043647, #003e4a, #00464a, #074d48);
+      border-radius: 20px;
+      color: white;
+      text-align: center;
+  }
+  .flex-container{
+    display: flex;
+    border-radius: 25px;
+    text-align: center;
+  }
+
+  .flex-item-left{
+    padding: 10px;
+    flex: 50%;
+  }
+
+  .flex-item-right{
+    padding: 10px;
+    flex: 50%;
+  }
+
+  column layout */
+  @media (max-width: 800px) {
+    .flex-item-right, .flex-item-left {
+      flex-direction:column;
+      width: 100px;
+      margin: 10px;
+    }
+}
+
+.button{
+  background-color: blue;
+  width: 100px;
+  border-radius: 25px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.button1:hover {
+  
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button2{
+  background-color: green;
+  width: 100px;
+  border-radius: 25px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+
+table, td{
+  border: 4px solid rgb(26, 25, 25);
+  text-align: center;
+}
+
+th {  
+  background-color: green;
+  border: 5px solid rgb(26, 25, 25);
+  text-align: center;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 15px;
+}
+
+/* The container */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
