--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -120,16 +120,15 @@ header{
   }
 
   input[type=text],input[type=file],input[type=number], input[type=email], input[type=password], input[type=radio], select, textarea , input[type=date]{
-    width: 100%;
-    padding: 12px ;
+    width: 50%;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 15px;
     resize: vertical;
-    cursor: pointer;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
   }
-  * {
-    box-sizing: border-box;
-  }
+ 
 
   label {
     margin: 0;
@@ -238,7 +237,7 @@ header{
   }
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 12000px) {
+  @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
       width: 100%;
       margin-top: 0;
