--- a/angular-app/src/app/main/input-card/input-card.component.html
+++ b/angular-app/src/app/main/input-card/input-card.component.html
@@ -1,1 +1,18 @@
-<p>input-card works!</p>
+<div class="container-form">
+    <h2>Form</h2>
+  <hr>
+    <div class="form-input">
+        <label for="title">Title</label>
+        <input  type="text" id="title" name="title" placeholder="Title" [textContent]="items.title">
+    </div>
+    <div class="form-input">
+        <label for="desc">Description</label>
+        <input type="text" id="desc" name="desc" placeholder="Description" [textContent]="items.desc">
+    </div>
+    <div class="form-input">
+        <label for="status">Status</label>
+        <input type="text" id="status" name="status" placeholder="Status" [textContent]="items.status">
+    </div>
+    <button (click)="addForms(items)">Submit</button>
+    
+</div>
