--- a/angular-app/src/app/main/input-card/input-card.component.html
+++ b/angular-app/src/app/main/input-card/input-card.component.html
@@ -3,16 +3,17 @@
   <hr>
     <div class="form-input">
         <label for="title">Title</label>
-        <input  type="text" id="title" name="title" placeholder="Title" [textContent]="items.title">
+        <input  type="text" id="title" name="title" placeholder="Title"  >
     </div>
     <div class="form-input">
         <label for="desc">Description</label>
-        <input type="text" id="desc" name="desc" placeholder="Description" [textContent]="items.desc">
+        <input type="text" id="desc" name="desc" placeholder="Description" >
     </div>
     <div class="form-input">
         <label for="status">Status</label>
-        <input type="text" id="status" name="status" placeholder="Status" [textContent]="items.status">
+        <input type="text" id="status" name="status" placeholder="Status" >
     </div>
-    <button (click)="addForms(items)">Submit</button>
+    <!-- <button (click)="addForms(items)">Submit</button> -->
+    <button>Submit</button>
     
 </div>
