--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-book-management></app-book-management>
+
+<div class="background">
+
+        <app-book-management></app-book-management>
+
+</div>
