--- a/angular-app/src/app/book-management/book-detail/book-detail.component.html
+++ b/angular-app/src/app/book-management/book-detail/book-detail.component.html
@@ -1,1 +1,9 @@
-<p>book-detail works!</p>
+<hr>
+    <div class="card">
+        <div class="img">Image Book</div>
+        <h2 [textContent]>Book Title</h2>
+        <p [textContent]>Book Author</p>
+        <p [textContent]>Publisher</p>
+        <p [textContent]>Publish Date</p>    
+    </div>
+<hr>
