--- a/angular-app/src/app/book-management/book-list/book-card/book-card.component.css
+++ b/angular-app/src/app/book-management/book-list/book-card/book-card.component.css
@@ -1,6 +1,7 @@
 .card {
     padding: 12px;
     width: 300px;
+    background-color: yellowgreen;
     border-radius: 8px;
     border: 2px solid rgba(0, 0, 0, 0.5);
   }
@@ -21,13 +22,14 @@
     text-align: justify;
   }
   .card > button {
-    background-color: green;
+    background-color: blue;
     padding: 8px;
     font-size: 16px;
     display: block;
     margin: 0 auto;
     margin-bottom: 8px;
     cursor: pointer;
+    color: black;
   }
   .card:hover {
     box-shadow: 3px 3px 7px 1px rgba(0, 0, 0, 0.5);
