--- a/angular-app/src/app/book-management/book-list/book-card/book-card.component.html
+++ b/angular-app/src/app/book-management/book-list/book-card/book-card.component.html
@@ -4,4 +4,5 @@
     <p [textContent]="data.authorbook">Book Author</p>
     <p [textContent]="data.publisher">Publisher</p>
     <p [textContent]="data.publishdate">Publish Date</p>
+    <button disabled="disabled">Click Here</button>
 </div>
