--- a/angular-app/src/app/book-management/book-management.component.html
+++ b/angular-app/src/app/book-management/book-management.component.html
@@ -1,3 +1,5 @@
 
 <app-book-list></app-book-list>
-<app-book-detail></app-book-detail>
+<div class="container-card">
+    <app-book-detail></app-book-detail>
+</div>
