--- a/angular-app/src/app/book-management/book-list/book-list.component.css
+++ b/angular-app/src/app/book-management/book-list/book-list.component.css
@@ -2,5 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     gap:20px;
+    margin-top: 10px;
     justify-content: center;
+    background-color: green;
 }
